--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "20.8.7",
-    "@types/react": "^18.2.29",
+    "@types/react": "18.2.33",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
